y.output
Terminals unused in grammar

   RESERVED
   LINETERMINATOR
   SIGN


Grammar

    0 $accept: Program $end

    1 Program: CLASS ID OBRACE ProgramCycle CBRACE

    2 ProgramCycle: ProgramCycle FieldDecl
    3             | ProgramCycle MethodDecl
    4             | ProgramCycle SEMI
    5             | %empty

    6 FieldDecl: PUBLIC STATIC Type ID FieldDeclCycle SEMI

    7 FieldDeclCycle: FieldDeclCycle COMMA ID
    8               | %empty

    9 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

   10 MethodHeader: Type ID OCURV FormalParams CCURV
   11             | Type ID OCURV CCURV
   12             | VOID ID OCURV FormalParams CCURV
   13             | VOID ID OCURV CCURV

   14 MethodBody: OBRACE MethodBodyCycle CBRACE

   15 MethodBodyCycle: MethodBodyCycle VarDecl
   16                | MethodBodyCycle Statement
   17                | %empty

   18 FormalParams: Type ID FormalParamsCycle
   19             | STRING OSQUARE CSQUARE ID

   20 FormalParamsCycle: FormalParamsCycle COMMA Type ID
   21                  | %empty

   22 VarDecl: Type ID VarDeclCycle SEMI

   23 VarDeclCycle: VarDeclCycle COMMA ID
   24             | %empty

   25 Type: BOOL
   26     | INT
   27     | DOUBLE

   28 Statement: OBRACE StatementCycle CBRACE
   29          | IF OCURV Expr CCURV Statement
   30          | IF OCURV Expr CCURV Statement ELSE Statement
   31          | WHILE OCURV Expr CCURV Statement
   32          | DO Statement WHILE OCURV Expr CCURV SEMI
   33          | PRINT OCURV Expr CCURV SEMI
   34          | PRINT OCURV STRLIT CCURV SEMI
   35          | SEMI
   36          | Assignment SEMI
   37          | MethodInvocation SEMI
   38          | ParseArgs SEMI
   39          | RETURN SEMI
   40          | RETURN Expr SEMI

   41 StatementCycle: StatementCycle Statement
   42               | %empty

   43 Assignment: ID ASSIGN Expr

   44 MethodInvocation: ID OCURV CCURV
   45                 | ID OCURV Expr MethodInvocationCycle CCURV

   46 MethodInvocationCycle: MethodInvocationCycle COMMA Expr
   47                      | %empty

   48 ParseArgs: PARSEINT OCURV ID OSQUARE Expr CSQUARE CCURV

   49 Expr: Assignment
   50     | MethodInvocation
   51     | ParseArgs
   52     | Expr AND Expr
   53     | Expr OR Expr
   54     | Expr EQ Expr
   55     | Expr GEQ Expr
   56     | Expr GT Expr
   57     | Expr LEQ Expr
   58     | Expr LT Expr
   59     | Expr NEQ Expr
   60     | Expr PLUS Expr
   61     | Expr MINUS Expr
   62     | Expr STAR Expr
   63     | Expr DIV Expr
   64     | Expr MOD Expr
   65     | PLUS Expr
   66     | MINUS Expr
   67     | NOT Expr
   68     | ID
   69     | ID DOTLENGTH
   70     | BOOLLIT
   71     | DECLIT
   72     | REALLIT


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 29 30
AND (259) 52
ASSIGN (260) 43
BOOL (261) 25
CLASS (262) 1
CCURV (263) 10 11 12 13 29 30 31 32 33 34 44 45 48
CBRACE (264) 1 14 28
COMMA (265) 7 20 23 46
CSQUARE (266) 19 48
DIV (267) 63
DO (268) 32
DOTLENGTH (269) 69
DOUBLE (270) 27
ELSE (271) 30
EQ (272) 54
GEQ (273) 55
GT (274) 56
INT (275) 26
LT (276) 58
LEQ (277) 57
MINUS (278) 61 66
MOD (279) 64
NEQ (280) 59
NOT (281) 67
OBRACE (282) 1 14 28
OCURV (283) 10 11 12 13 29 30 31 32 33 34 44 45 48
OR (284) 53
OSQUARE (285) 19 48
PARSEINT (286) 48
PLUS (287) 60 65
PRINT (288) 33 34
PUBLIC (289) 6 9
RESERVED (290)
RETURN (291) 39 40
SEMI (292) 4 6 22 32 33 34 35 36 37 38 39 40
STAR (293) 62
STATIC (294) 6 9
STRING (295) 19
VOID (296) 12 13
WHILE (297) 31 32
BOOLLIT (298) 70
REALLIT (299) 72
DECLIT (300) 71
ID (301) 1 6 7 10 11 12 13 18 19 20 22 23 43 44 45 48 68 69
STRLIT (302) 34
LINETERMINATOR (303)
SIGN (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
Program (51)
    on left: 1, on right: 0
ProgramCycle (52)
    on left: 2 3 4 5, on right: 1 2 3 4
FieldDecl (53)
    on left: 6, on right: 2
FieldDeclCycle (54)
    on left: 7 8, on right: 6 7
MethodDecl (55)
    on left: 9, on right: 3
MethodHeader (56)
    on left: 10 11 12 13, on right: 9
MethodBody (57)
    on left: 14, on right: 9
MethodBodyCycle (58)
    on left: 15 16 17, on right: 14 15 16
FormalParams (59)
    on left: 18 19, on right: 10 12
FormalParamsCycle (60)
    on left: 20 21, on right: 18 20
VarDecl (61)
    on left: 22, on right: 15
VarDeclCycle (62)
    on left: 23 24, on right: 22 23
Type (63)
    on left: 25 26 27, on right: 6 10 11 18 20 22
Statement (64)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40, on right: 16 29
    30 31 32 41
StatementCycle (65)
    on left: 41 42, on right: 28 41
Assignment (66)
    on left: 43, on right: 36 49
MethodInvocation (67)
    on left: 44 45, on right: 37 50
MethodInvocationCycle (68)
    on left: 46 47, on right: 45 46
ParseArgs (69)
    on left: 48, on right: 38 51
Expr (70)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71 72, on right: 29 30 31 32 33 40 43 45 46 48 52 53
    54 55 56 57 58 59 60 61 62 63 64 65 66 67


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS . ID OBRACE ProgramCycle CBRACE

    ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS ID . OBRACE ProgramCycle CBRACE

    OBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: CLASS ID OBRACE . ProgramCycle CBRACE

    $default  reduce using rule 5 (ProgramCycle)

    ProgramCycle  go to state 6


State 6

    1 Program: CLASS ID OBRACE ProgramCycle . CBRACE
    2 ProgramCycle: ProgramCycle . FieldDecl
    3             | ProgramCycle . MethodDecl
    4             | ProgramCycle . SEMI

    CBRACE  shift, and go to state 7
    PUBLIC  shift, and go to state 8
    SEMI    shift, and go to state 9

    FieldDecl   go to state 10
    MethodDecl  go to state 11


State 7

    1 Program: CLASS ID OBRACE ProgramCycle CBRACE .

    $default  reduce using rule 1 (Program)


State 8

    6 FieldDecl: PUBLIC . STATIC Type ID FieldDeclCycle SEMI
    9 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody

    STATIC  shift, and go to state 12


State 9

    4 ProgramCycle: ProgramCycle SEMI .

    $default  reduce using rule 4 (ProgramCycle)


State 10

    2 ProgramCycle: ProgramCycle FieldDecl .

    $default  reduce using rule 2 (ProgramCycle)


State 11

    3 ProgramCycle: ProgramCycle MethodDecl .

    $default  reduce using rule 3 (ProgramCycle)


State 12

    6 FieldDecl: PUBLIC STATIC . Type ID FieldDeclCycle SEMI
    9 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody

    BOOL    shift, and go to state 13
    DOUBLE  shift, and go to state 14
    INT     shift, and go to state 15
    VOID    shift, and go to state 16

    MethodHeader  go to state 17
    Type          go to state 18


State 13

   25 Type: BOOL .

    $default  reduce using rule 25 (Type)


State 14

   27 Type: DOUBLE .

    $default  reduce using rule 27 (Type)


State 15

   26 Type: INT .

    $default  reduce using rule 26 (Type)


State 16

   12 MethodHeader: VOID . ID OCURV FormalParams CCURV
   13             | VOID . ID OCURV CCURV

    ID  shift, and go to state 19


State 17

    9 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody

    OBRACE  shift, and go to state 20

    MethodBody  go to state 21


State 18

    6 FieldDecl: PUBLIC STATIC Type . ID FieldDeclCycle SEMI
   10 MethodHeader: Type . ID OCURV FormalParams CCURV
   11             | Type . ID OCURV CCURV

    ID  shift, and go to state 22


State 19

   12 MethodHeader: VOID ID . OCURV FormalParams CCURV
   13             | VOID ID . OCURV CCURV

    OCURV  shift, and go to state 23


State 20

   14 MethodBody: OBRACE . MethodBodyCycle CBRACE

    $default  reduce using rule 17 (MethodBodyCycle)

    MethodBodyCycle  go to state 24


State 21

    9 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 9 (MethodDecl)


State 22

    6 FieldDecl: PUBLIC STATIC Type ID . FieldDeclCycle SEMI
   10 MethodHeader: Type ID . OCURV FormalParams CCURV
   11             | Type ID . OCURV CCURV

    OCURV  shift, and go to state 25

    $default  reduce using rule 8 (FieldDeclCycle)

    FieldDeclCycle  go to state 26


State 23

   12 MethodHeader: VOID ID OCURV . FormalParams CCURV
   13             | VOID ID OCURV . CCURV

    BOOL    shift, and go to state 13
    CCURV   shift, and go to state 27
    DOUBLE  shift, and go to state 14
    INT     shift, and go to state 15
    STRING  shift, and go to state 28

    FormalParams  go to state 29
    Type          go to state 30


State 24

   14 MethodBody: OBRACE MethodBodyCycle . CBRACE
   15 MethodBodyCycle: MethodBodyCycle . VarDecl
   16                | MethodBodyCycle . Statement

    IF        shift, and go to state 31
    BOOL      shift, and go to state 13
    CBRACE    shift, and go to state 32
    DO        shift, and go to state 33
    DOUBLE    shift, and go to state 14
    INT       shift, and go to state 15
    OBRACE    shift, and go to state 34
    PARSEINT  shift, and go to state 35
    PRINT     shift, and go to state 36
    RETURN    shift, and go to state 37
    SEMI      shift, and go to state 38
    WHILE     shift, and go to state 39
    ID        shift, and go to state 40

    VarDecl           go to state 41
    Type              go to state 42
    Statement         go to state 43
    Assignment        go to state 44
    MethodInvocation  go to state 45
    ParseArgs         go to state 46


State 25

   10 MethodHeader: Type ID OCURV . FormalParams CCURV
   11             | Type ID OCURV . CCURV

    BOOL    shift, and go to state 13
    CCURV   shift, and go to state 47
    DOUBLE  shift, and go to state 14
    INT     shift, and go to state 15
    STRING  shift, and go to state 28

    FormalParams  go to state 48
    Type          go to state 30


State 26

    6 FieldDecl: PUBLIC STATIC Type ID FieldDeclCycle . SEMI
    7 FieldDeclCycle: FieldDeclCycle . COMMA ID

    COMMA  shift, and go to state 49
    SEMI   shift, and go to state 50


State 27

   13 MethodHeader: VOID ID OCURV CCURV .

    $default  reduce using rule 13 (MethodHeader)


State 28

   19 FormalParams: STRING . OSQUARE CSQUARE ID

    OSQUARE  shift, and go to state 51


State 29

   12 MethodHeader: VOID ID OCURV FormalParams . CCURV

    CCURV  shift, and go to state 52


State 30

   18 FormalParams: Type . ID FormalParamsCycle

    ID  shift, and go to state 53


State 31

   29 Statement: IF . OCURV Expr CCURV Statement
   30          | IF . OCURV Expr CCURV Statement ELSE Statement

    OCURV  shift, and go to state 54


State 32

   14 MethodBody: OBRACE MethodBodyCycle CBRACE .

    $default  reduce using rule 14 (MethodBody)


State 33

   32 Statement: DO . Statement WHILE OCURV Expr CCURV SEMI

    IF        shift, and go to state 31
    DO        shift, and go to state 33
    OBRACE    shift, and go to state 34
    PARSEINT  shift, and go to state 35
    PRINT     shift, and go to state 36
    RETURN    shift, and go to state 37
    SEMI      shift, and go to state 38
    WHILE     shift, and go to state 39
    ID        shift, and go to state 40

    Statement         go to state 55
    Assignment        go to state 44
    MethodInvocation  go to state 45
    ParseArgs         go to state 46


State 34

   28 Statement: OBRACE . StatementCycle CBRACE

    $default  reduce using rule 42 (StatementCycle)

    StatementCycle  go to state 56


State 35

   48 ParseArgs: PARSEINT . OCURV ID OSQUARE Expr CSQUARE CCURV

    OCURV  shift, and go to state 57


State 36

   33 Statement: PRINT . OCURV Expr CCURV SEMI
   34          | PRINT . OCURV STRLIT CCURV SEMI

    OCURV  shift, and go to state 58


State 37

   39 Statement: RETURN . SEMI
   40          | RETURN . Expr SEMI

    MINUS     shift, and go to state 59
    NOT       shift, and go to state 60
    PARSEINT  shift, and go to state 35
    PLUS      shift, and go to state 61
    SEMI      shift, and go to state 62
    BOOLLIT   shift, and go to state 63
    REALLIT   shift, and go to state 64
    DECLIT    shift, and go to state 65
    ID        shift, and go to state 66

    Assignment        go to state 67
    MethodInvocation  go to state 68
    ParseArgs         go to state 69
    Expr              go to state 70


State 38

   35 Statement: SEMI .

    $default  reduce using rule 35 (Statement)


State 39

   31 Statement: WHILE . OCURV Expr CCURV Statement

    OCURV  shift, and go to state 71


State 40

   43 Assignment: ID . ASSIGN Expr
   44 MethodInvocation: ID . OCURV CCURV
   45                 | ID . OCURV Expr MethodInvocationCycle CCURV

    ASSIGN  shift, and go to state 72
    OCURV   shift, and go to state 73


State 41

   15 MethodBodyCycle: MethodBodyCycle VarDecl .

    $default  reduce using rule 15 (MethodBodyCycle)


State 42

   22 VarDecl: Type . ID VarDeclCycle SEMI

    ID  shift, and go to state 74


State 43

   16 MethodBodyCycle: MethodBodyCycle Statement .

    $default  reduce using rule 16 (MethodBodyCycle)


State 44

   36 Statement: Assignment . SEMI

    SEMI  shift, and go to state 75


State 45

   37 Statement: MethodInvocation . SEMI

    SEMI  shift, and go to state 76


State 46

   38 Statement: ParseArgs . SEMI

    SEMI  shift, and go to state 77


State 47

   11 MethodHeader: Type ID OCURV CCURV .

    $default  reduce using rule 11 (MethodHeader)


State 48

   10 MethodHeader: Type ID OCURV FormalParams . CCURV

    CCURV  shift, and go to state 78


State 49

    7 FieldDeclCycle: FieldDeclCycle COMMA . ID

    ID  shift, and go to state 79


State 50

    6 FieldDecl: PUBLIC STATIC Type ID FieldDeclCycle SEMI .

    $default  reduce using rule 6 (FieldDecl)


State 51

   19 FormalParams: STRING OSQUARE . CSQUARE ID

    CSQUARE  shift, and go to state 80


State 52

   12 MethodHeader: VOID ID OCURV FormalParams CCURV .

    $default  reduce using rule 12 (MethodHeader)


State 53

   18 FormalParams: Type ID . FormalParamsCycle

    $default  reduce using rule 21 (FormalParamsCycle)

    FormalParamsCycle  go to state 81


State 54

   29 Statement: IF OCURV . Expr CCURV Statement
   30          | IF OCURV . Expr CCURV Statement ELSE Statement

    MINUS     shift, and go to state 59
    NOT       shift, and go to state 60
    PARSEINT  shift, and go to state 35
    PLUS      shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    REALLIT   shift, and go to state 64
    DECLIT    shift, and go to state 65
    ID        shift, and go to state 66

    Assignment        go to state 67
    MethodInvocation  go to state 68
    ParseArgs         go to state 69
    Expr              go to state 82


State 55

   32 Statement: DO Statement . WHILE OCURV Expr CCURV SEMI

    WHILE  shift, and go to state 83


State 56

   28 Statement: OBRACE StatementCycle . CBRACE
   41 StatementCycle: StatementCycle . Statement

    IF        shift, and go to state 31
    CBRACE    shift, and go to state 84
    DO        shift, and go to state 33
    OBRACE    shift, and go to state 34
    PARSEINT  shift, and go to state 35
    PRINT     shift, and go to state 36
    RETURN    shift, and go to state 37
    SEMI      shift, and go to state 38
    WHILE     shift, and go to state 39
    ID        shift, and go to state 40

    Statement         go to state 85
    Assignment        go to state 44
    MethodInvocation  go to state 45
    ParseArgs         go to state 46


State 57

   48 ParseArgs: PARSEINT OCURV . ID OSQUARE Expr CSQUARE CCURV

    ID  shift, and go to state 86


State 58

   33 Statement: PRINT OCURV . Expr CCURV SEMI
   34          | PRINT OCURV . STRLIT CCURV SEMI

    MINUS     shift, and go to state 59
    NOT       shift, and go to state 60
    PARSEINT  shift, and go to state 35
    PLUS      shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    REALLIT   shift, and go to state 64
    DECLIT    shift, and go to state 65
    ID        shift, and go to state 66
    STRLIT    shift, and go to state 87

    Assignment        go to state 67
    MethodInvocation  go to state 68
    ParseArgs         go to state 69
    Expr              go to state 88


State 59

   66 Expr: MINUS . Expr

    MINUS     shift, and go to state 59
    NOT       shift, and go to state 60
    PARSEINT  shift, and go to state 35
    PLUS      shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    REALLIT   shift, and go to state 64
    DECLIT    shift, and go to state 65
    ID        shift, and go to state 66

    Assignment        go to state 67
    MethodInvocation  go to state 68
    ParseArgs         go to state 69
    Expr              go to state 89


State 60

   67 Expr: NOT . Expr

    MINUS     shift, and go to state 59
    NOT       shift, and go to state 60
    PARSEINT  shift, and go to state 35
    PLUS      shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    REALLIT   shift, and go to state 64
    DECLIT    shift, and go to state 65
    ID        shift, and go to state 66

    Assignment        go to state 67
    MethodInvocation  go to state 68
    ParseArgs         go to state 69
    Expr              go to state 90


State 61

   65 Expr: PLUS . Expr

    MINUS     shift, and go to state 59
    NOT       shift, and go to state 60
    PARSEINT  shift, and go to state 35
    PLUS      shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    REALLIT   shift, and go to state 64
    DECLIT    shift, and go to state 65
    ID        shift, and go to state 66

    Assignment        go to state 67
    MethodInvocation  go to state 68
    ParseArgs         go to state 69
    Expr              go to state 91


State 62

   39 Statement: RETURN SEMI .

    $default  reduce using rule 39 (Statement)


State 63

   70 Expr: BOOLLIT .

    $default  reduce using rule 70 (Expr)


State 64

   72 Expr: REALLIT .

    $default  reduce using rule 72 (Expr)


State 65

   71 Expr: DECLIT .

    $default  reduce using rule 71 (Expr)


State 66

   43 Assignment: ID . ASSIGN Expr
   44 MethodInvocation: ID . OCURV CCURV
   45                 | ID . OCURV Expr MethodInvocationCycle CCURV
   68 Expr: ID .
   69     | ID . DOTLENGTH

    ASSIGN     shift, and go to state 72
    DOTLENGTH  shift, and go to state 92
    OCURV      shift, and go to state 73

    $default  reduce using rule 68 (Expr)


State 67

   49 Expr: Assignment .

    $default  reduce using rule 49 (Expr)


State 68

   50 Expr: MethodInvocation .

    $default  reduce using rule 50 (Expr)


State 69

   51 Expr: ParseArgs .

    $default  reduce using rule 51 (Expr)


State 70

   40 Statement: RETURN Expr . SEMI
   52 Expr: Expr . AND Expr
   53     | Expr . OR Expr
   54     | Expr . EQ Expr
   55     | Expr . GEQ Expr
   56     | Expr . GT Expr
   57     | Expr . LEQ Expr
   58     | Expr . LT Expr
   59     | Expr . NEQ Expr
   60     | Expr . PLUS Expr
   61     | Expr . MINUS Expr
   62     | Expr . STAR Expr
   63     | Expr . DIV Expr
   64     | Expr . MOD Expr

    AND    shift, and go to state 93
    DIV    shift, and go to state 94
    EQ     shift, and go to state 95
    GEQ    shift, and go to state 96
    GT     shift, and go to state 97
    LT     shift, and go to state 98
    LEQ    shift, and go to state 99
    MINUS  shift, and go to state 100
    MOD    shift, and go to state 101
    NEQ    shift, and go to state 102
    OR     shift, and go to state 103
    PLUS   shift, and go to state 104
    SEMI   shift, and go to state 105
    STAR   shift, and go to state 106


State 71

   31 Statement: WHILE OCURV . Expr CCURV Statement

    MINUS     shift, and go to state 59
    NOT       shift, and go to state 60
    PARSEINT  shift, and go to state 35
    PLUS      shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    REALLIT   shift, and go to state 64
    DECLIT    shift, and go to state 65
    ID        shift, and go to state 66

    Assignment        go to state 67
    MethodInvocation  go to state 68
    ParseArgs         go to state 69
    Expr              go to state 107


State 72

   43 Assignment: ID ASSIGN . Expr

    MINUS     shift, and go to state 59
    NOT       shift, and go to state 60
    PARSEINT  shift, and go to state 35
    PLUS      shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    REALLIT   shift, and go to state 64
    DECLIT    shift, and go to state 65
    ID        shift, and go to state 66

    Assignment        go to state 67
    MethodInvocation  go to state 68
    ParseArgs         go to state 69
    Expr              go to state 108


State 73

   44 MethodInvocation: ID OCURV . CCURV
   45                 | ID OCURV . Expr MethodInvocationCycle CCURV

    CCURV     shift, and go to state 109
    MINUS     shift, and go to state 59
    NOT       shift, and go to state 60
    PARSEINT  shift, and go to state 35
    PLUS      shift, and go to state 61
    BOOLLIT   shift, and go to state 63
    REALLIT   shift, and go to state 64
    DECLIT    shift, and go to state 65
    ID        shift, and go to state 66

    Assignment        go to state 67
    MethodInvocation  go to state 68
    ParseArgs         go to state 69
    Expr              go to state 110


State 74

   22 VarDecl: Type ID . VarDeclCycle SEMI

    $default  reduce using rule 24 (VarDeclCycle)

    VarDeclCycle  go to state 111


State 75

   36 Statement: Assignment SEMI .

    $default  reduce using rule 36 (Statement)


State 76

   37 Statement: MethodInvocation SEMI .

    $default  reduce using rule 37 (Statement)


State 77

   38 Statement: ParseArgs SEMI .

    $default  reduce using rule 38 (Statement)


State 78

   10 MethodHeader: Type ID OCURV FormalParams CCURV .

    $default  reduce using rule 10 (MethodHeader)


State 79

    7 FieldDeclCycle: FieldDeclCycle COMMA ID .

    $default  reduce using rule 7 (FieldDeclCycle)


State 80

   19 FormalParams: STRING OSQUARE CSQUARE . ID

    ID  shift, and go to state 112


State 81

   18 FormalParams: Type ID FormalParamsCycle .
   20 FormalParamsCycle: FormalParamsCycle . COMMA Type ID

    COMMA  shift, and go to state 113

    $default  reduce using rule 18 (FormalParams)


State 82

   29 Statement: IF OCURV Expr . CCURV Statement
   30          | IF OCURV Expr . CCURV Statement ELSE Statement
   52 Expr: Expr . AND Expr
   53     | Expr . OR Expr
   54     | Expr . EQ Expr
   55     | Expr . GEQ Expr
   56     | Expr . GT Expr
   57     | Expr . LEQ Expr
   58     | Expr . LT Expr
   59     | Expr . NEQ Expr
   60     | Expr . PLUS Expr
   61     | Expr . MINUS Expr
   62     | Expr . STAR Expr
   63     | Expr . DIV Expr
   64     | Expr . MOD Expr

    AND    shift, and go to state 93
    CCURV  shift, and go to state 114
    DIV    shift, and go to state 94
    EQ     shift, and go to state 95
    GEQ    shift, and go to state 96
    GT     shift, and go to state 97
    LT     shift, and go to state 98
    LEQ    shift, and go to state 99
    MINUS  shift, and go to state 100
    MOD    shift, and go to state 101
    NEQ    shift, and go to state 102
    OR     shift, and go to state 103
    PLUS   shift, and go to state 104
    STAR   shift, and go to state 106


State 83
